@@ -4,6 +4,9 @@
   * Fix #855 force a resume on a torrent if a 'Force Recheck' is initiated
   * Fix #862 deluged crash when access http://localhost:58846
 
+==== WebUI ====
+  * Fix #870 use proper config location for loading ssl cert
+
 === Deluge 1.1.5 - (16 March 2009) ===
 ==== Core ====
   * Fix config file saving when no current config file exists
